First post created

--- a/public/404.html
+++ b/public/404.html
@@ -111,18 +111,13 @@
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blog">
-                    <span>Blog</span>
+                <a href="http://localhost:1313/posts/" title="Posts">
+                    <span>Posts</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:1313/projects/" title="Projects">
                     <span>Projects</span>
-                </a>
-            </li>
-            <li>
-                <a href="http://localhost:1313/contact/" title="Contact">
-                    <span>Contact</span>
                 </a>
             </li>
         </ul>
