--- a/public/pt/404.html
+++ b/public/pt/404.html
@@ -106,23 +106,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/pt/about/" title="About">
-                    <span>About</span>
+                <a href="http://localhost:1313/pt/about/" title="Sobre">
+                    <span>Sobre</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/posts/" title="Blog">
-                    <span>Blog</span>
+                <a href="http://localhost:1313/pt/posts/" title="Publicações">
+                    <span>Publicações</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/projects/" title="Projects">
-                    <span>Projects</span>
-                </a>
-            </li>
-            <li>
-                <a href="http://localhost:1313/pt/contact/" title="Contact">
-                    <span>Contact</span>
+                <a href="http://localhost:1313/pt/projects/" title="Projetos">
+                    <span>Projetos</span>
                 </a>
             </li>
         </ul>
