--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | Eloy Melo</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="Eloy Melo">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="https://eloymelo.com/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://eloymelo.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://eloymelo.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://eloymelo.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://eloymelo.com/apple-touch-icon.png">
+<link rel="mask-icon" href="https://eloymelo.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
-<link rel="alternate" hreflang="pt" href="http://localhost:1313/pt/404.html">
+<link rel="alternate" hreflang="en" href="https://eloymelo.com/404.html">
+<link rel="alternate" hreflang="pt" href="https://eloymelo.com/pt/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,7 +56,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="https://eloymelo.com/404.html">
+  <meta property="og:site_name" content="Eloy Melo">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+
 </head>
 
 <body class="list" id="top">
@@ -74,7 +82,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
+            <a href="https://eloymelo.com/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -98,7 +106,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="http://localhost:1313/pt/" title="Português"
+                        <a href="https://eloymelo.com/pt/" title="Português"
                             aria-label="Português">Pt</a>
                     </li>
                 </ul>
@@ -106,17 +114,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/about/" title="About">
+                <a href="https://eloymelo.com/about/" title="About">
                     <span>About</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Posts">
+                <a href="https://eloymelo.com/posts/" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/projects/" title="Projects">
+                <a href="https://eloymelo.com/projects/" title="Projects">
                     <span>Projects</span>
                 </a>
             </li>
@@ -128,7 +136,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">Eloy Melo</a></span> · 
+        <span>&copy; 2025 <a href="https://eloymelo.com/">Eloy Melo</a></span> · 
 
     <span>
         Powered by
