--- a/public/404.html
+++ b/public/404.html
@@ -120,6 +120,11 @@
                     <span>Projects</span>
                 </a>
             </li>
+            <li>
+                <a href="http://localhost:1313/tutorials/" title="Tutorials">
+                    <span>Tutorials</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
