--- a/public/pt/404.html
+++ b/public/pt/404.html
@@ -120,6 +120,11 @@
                     <span>Projetos</span>
                 </a>
             </li>
+            <li>
+                <a href="http://localhost:1313/pt/tutorials/" title="Tutoriais">
+                    <span>Tutoriais</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
