--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>404 Page not found | Eloy Melo</title>
+<title>About | Eloy Melo</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content="About - Eloy Melo">
 <meta name="author" content="Eloy Melo">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="http://localhost:1313/about/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,8 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
-<link rel="alternate" hreflang="pt" href="http://localhost:1313/pt/404.html">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/about/index.xml">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/about/">
 <noscript>
     <style>
         #theme-toggle,
@@ -107,7 +107,7 @@
         <ul id="menu">
             <li>
                 <a href="http://localhost:1313/about/" title="About">
-                    <span>About</span>
+                    <span class="active">About</span>
                 </a>
             </li>
             <li>
@@ -133,8 +133,12 @@
         </ul>
     </nav>
 </header>
-<main class="main">
-<div class="not-found">404</div>
+<main class="main"> 
+<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/">Home</a></div>
+  <h1>
+    About
+  </h1>
+</header>
     </main>
     
 <footer class="footer">
