--- a/public/en/404.html
+++ b/public/en/404.html
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="pt" href="http://localhost:1313/404.html">
+<link rel="alternate" hreflang="pt" href="http://localhost:1313/pt/404.html">
 <link rel="alternate" hreflang="en" href="http://localhost:1313/en/404.html">
 <noscript>
     <style>
@@ -98,7 +98,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="http://localhost:1313/" title="Português"
+                        <a href="http://localhost:1313/pt/" title="Português"
                             aria-label="Português">Pt</a>
                     </li>
                 </ul>
