--- a/public/pt/404.html
+++ b/public/pt/404.html
@@ -18,8 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
 <link rel="alternate" hreflang="pt" href="http://localhost:1313/pt/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/en/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -98,7 +98,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="http://localhost:1313/" title="English"
+                        <a href="http://localhost:1313/en/" title="English"
                             aria-label="English">En</a>
                     </li>
                 </ul>
@@ -106,27 +106,27 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/pt/about/" title="Sobre">
+                <a href="http://localhost:1313/pt/sobre/" title="Sobre">
                     <span>Sobre</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/posts/" title="Publicações">
+                <a href="http://localhost:1313/pt/publica%C3%A7%C3%B5es/" title="Publicações">
                     <span>Publicações</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/projects/" title="Projetos">
+                <a href="http://localhost:1313/pt/projetos/" title="Projetos">
                     <span>Projetos</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/tutorials/" title="Tutoriais">
+                <a href="http://localhost:1313/pt/tutoriais/" title="Tutoriais">
                     <span>Tutoriais</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt/contact/" title="Contato">
+                <a href="http://localhost:1313/pt/contato/" title="Contato">
                     <span>Contato</span>
                 </a>
             </li>
