--- a/public/sobre/index.html
+++ b/public/sobre/index.html
@@ -77,7 +77,7 @@ Sinta-se à vontade para explorar o conteúdo e entrar em contato!">
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
+            <a href="http://localhost:1313/pt/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -99,31 +99,37 @@ Sinta-se à vontade para explorar o conteúdo e entrar em contato!">
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                    <li>
+                        <a href="http://localhost:1313/en/" title="English"
+                            aria-label="English">En</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/sobre/" title="Sobre">
-                    <span class="active">Sobre</span>
+                <a href="http://localhost:1313/pt/sobre/" title="Sobre">
+                    <span>Sobre</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/publica%C3%A7%C3%B5es/" title="Publicações">
+                <a href="http://localhost:1313/pt/publica%C3%A7%C3%B5es/" title="Publicações">
                     <span>Publicações</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/projetos/" title="Projetos">
+                <a href="http://localhost:1313/pt/projetos/" title="Projetos">
                     <span>Projetos</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/tutoriais/" title="Tutoriais">
+                <a href="http://localhost:1313/pt/tutoriais/" title="Tutoriais">
                     <span>Tutoriais</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/contato/" title="Contato">
+                <a href="http://localhost:1313/pt/contato/" title="Contato">
                     <span>Contato</span>
                 </a>
             </li>
@@ -131,7 +137,7 @@ Sinta-se à vontade para explorar o conteúdo e entrar em contato!">
     </nav>
 </header>
 <main class="main"> 
-<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/">Início</a></div>
+<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/pt/">Início</a></div>
   <h1>
     Sobre mim
   </h1>
@@ -146,7 +152,7 @@ Sinta-se à vontade para explorar o conteúdo e entrar em contato!">
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">Eloy Melo</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/pt/">Eloy Melo</a></span> · 
 
     <span>
         Powered by
