--- a/public/about/index.html
+++ b/public/about/index.html
@@ -13,7 +13,7 @@ This site serves as my personal portfolio, blog, and learning journal. Soon, you
 Feel free to explore the content and get in touch!">
 <meta name="author" content="Eloy Melo">
 <link rel="canonical" href="http://localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.6da9a63d25a9608bca2f7f907a030e887a7dd3c3f3918e4cc113129361414bda.css" integrity="sha256-bammPSWpYIvKL3&#43;QegMOiHp908PzkY5MwRMSk2FBS9o=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
@@ -77,7 +77,7 @@ Feel free to explore the content and get in touch!">
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/en/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
+            <a href="http://localhost:1313/" accesskey="h" title="Eloy Melo (Alt + H)">Eloy Melo</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -99,37 +99,31 @@ Feel free to explore the content and get in touch!">
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
-                <ul class="lang-switch"><li>|</li>
-                    <li>
-                        <a href="http://localhost:1313/pt/" title="Português"
-                            aria-label="Português">Pt</a>
-                    </li>
-                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/en/about/" title="About">
-                    <span>About</span>
+                <a href="http://localhost:1313/about/" title="About">
+                    <span class="active">About</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/en/posts/" title="Posts">
+                <a href="http://localhost:1313/posts/" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/en/projects/" title="Projects">
+                <a href="http://localhost:1313/projects/" title="Projects">
                     <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/en/tutorials/" title="Tutorials">
+                <a href="http://localhost:1313/tutorials/" title="Tutorials">
                     <span>Tutorials</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/en/contact/" title="Contact">
+                <a href="http://localhost:1313/contact/" title="Contact">
                     <span>Contact</span>
                 </a>
             </li>
@@ -137,7 +131,7 @@ Feel free to explore the content and get in touch!">
     </nav>
 </header>
 <main class="main"> 
-<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/en/">Home</a></div>
+<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/">Home</a></div>
   <h1>
     About Me
   </h1>
@@ -152,7 +146,7 @@ Feel free to explore the content and get in touch!">
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/en/">Eloy Melo</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">Eloy Melo</a></span> · 
 
     <span>
         Powered by
