Fix 'Tutorials' section

--- a/public/tutorials/debian-post-install/index.html
+++ b/public/tutorials/debian-post-install/index.html
@@ -244,7 +244,7 @@ Enable bookworm backports">
     <br>
     <span>Fedora Post Install</span>
   </a>
-  <a class="next" href="http://localhost:1313/tutorials/">
+  <a class="next" href="http://localhost:1313/tutorials/arch-post-install/">
     <span class="title">Next »</span>
     <br>
     <span>Arch Post Install</span>
