--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,7 +59,9 @@ Feel free to explore the content and get in touch!">
         }
 
     </style>
-</noscript>
+</noscript><link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body class="list" id="top">
