--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -59,7 +59,9 @@ YouTube Channel">
         }
 
     </style>
-</noscript>
+</noscript><link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body class="" id="top">
