--- a/public/tutorials/arch-post-install/index.html
+++ b/public/tutorials/arch-post-install/index.html
@@ -85,7 +85,9 @@ Create a backup of the mirrorlist file.">
         }
 
     </style>
-</noscript>
+</noscript><link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body class="" id="top">
