--- a/public/tutorials/debian-post-install/index.html
+++ b/public/tutorials/debian-post-install/index.html
@@ -70,7 +70,9 @@ Enable bookworm backports">
         }
 
     </style>
-</noscript>
+</noscript><link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body class="" id="top">
