--- a/public/tutorials/fedora-post-install/index.html
+++ b/public/tutorials/fedora-post-install/index.html
@@ -103,7 +103,9 @@ Follow this guide under fonts documentation and this guide as well.">
         }
 
     </style>
-</noscript>
+</noscript><link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body class="" id="top">
